--- a/dom-projects.html
+++ b/dom-projects.html
@@ -5,17 +5,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DOM Projects</title>
+  <style>
+    .subscribe-button{
+      border: none;
+      background-color: black;
+      color: white;
+      padding: 10px 15px;
+      font-weight: bold;
+      border-radius: 50px;
+      cursor: pointer;
+      margin-bottom: 30px;
+    }
+
+    .is-subscribed{
+      background-color: rgb(240,240,240);
+      color: black;
+    }
+
+    body{
+      font-family: Arial;
+    }
+
+    .cost-input{
+      font-size: 15px;
+      padding: 10px;
+    }
+    
+    .calculate-button{
+      background-color: green;
+      color: white;
+      border: none;
+      font-size: 15px;
+      padding: 12px 15px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 
 <body>
   <p>YouTube Subscribe Button</p>
   <button onclick="
   subscribe()
-  " class="js-subscribe-button">Subscribe</button>
+  " class="js-subscribe-button subscribe-button">Subscribe</button>
 
   <p>Amazon Shipping Calculator</p>
-  <input class="js-cost-input" type="text" placeholder="Cost of order" onkeydown="handleCostKeyDown(event)">
-  <button onclick="calculateTotal()">Calculate</button>
+  <input class="js-cost-input cost-input" type="text" placeholder="Cost of order" onkeydown="handleCostKeyDown(event)">
+  <button onclick="calculateTotal()" class="calculate-button">Calculate</button>
   <p class="js-total-cost"></p>
 
 
@@ -43,9 +78,11 @@
 
       if (buttonElement.innerText === 'Subscribe') {
         buttonElement.innerText = 'Subscribed';
+        buttonElement.classList.add('is-subscribed');
       }
       else {
         buttonElement.innerText = 'Subscribe';
+        buttonElement.classList.remove('is-subscribed');
       }
     }
   </script>
