removed onclick attributes from the buttons of rock-paper-scissors game and added addeventlistener using js

--- a/rock-paper-scissors-dom.html
+++ b/rock-paper-scissors-dom.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <p class="title">Rock Paper Scissors</p>
-  <button onclick="playGame('rock');" class="move-button"><img class="move-icon" src="assets/rock-emoji.png"></button>
-  <button onclick="playGame('paper');" class="move-button"><img src="assets/paper-emoji.png" class="move-icon"></button>
-  <button onclick="playGame('scissors');" class="move-button"><img src="assets/scissors-emoji.png" class="move-icon"></button>
+  <button class="move-button js-rock-button"><img class="move-icon" src="assets/rock-emoji.png"></button>
+  <button class="move-button js-paper-button"><img src="assets/paper-emoji.png" class="move-icon"></button>
+  <button class="move-button js-scissor-button"><img src="assets/scissors-emoji.png" class="move-icon"></button>
 
   <p class="js-result result"></p>
   <p class="js-moves"></p>
