--- a/Mini-Projects/Weather-App/index.html
+++ b/Mini-Projects/Weather-App/index.html
@@ -12,6 +12,11 @@
       <input type="text" placeholder="Enter city name" spellcheck="false">
       <button><img src="images/search.png" alt=""></button>
     </div>
+    <div class="weather">
+      <img src="images/rain.png" alt="" class="weather-icon">
+      <h1 class="temp">22&deg;C</h1>
+      <h2 class="city">New York</h2>
+    </div>
   </div>
 </body>
 </html>
