--- a/Mini-Projects/Weather-App/index.html
+++ b/Mini-Projects/Weather-App/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather App</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="card">
     <div class="search">
@@ -23,6 +25,9 @@
             <p class="humidity">50%</p>
             <p>Humidity</p>
           </div>
+        </div>
+        <div class="col">
+          <img src="images/wind.png" alt="">
           <div>
             <p class="wind">15km/h</p>
             <p>Wind Speed</p>
@@ -32,4 +37,5 @@
     </div>
   </div>
 </body>
+
 </html>
