--- a/Mini-Projects/Weather-App/index.html
+++ b/Mini-Projects/Weather-App/index.html
@@ -14,6 +14,9 @@
       <input type="text" placeholder="Enter city name" spellcheck="false">
       <button><img src="images/search.png" alt=""></button>
     </div>
+    <div class="error">
+      <p>Invalid City Name</p>
+    </div>
     <div class="weather">
       <img src="images/rain.png" alt="" class="weather-icon">
       <h1 class="temp">22&deg;C</h1>
