--- a/Mini-Projects/To-Do-List-App/index.html
+++ b/Mini-Projects/To-Do-List-App/index.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="container">
+    <div class="todo-app">
+      <h2>To-Do List <img src="images/icon.png" alt=""></h2>
+      <div class="row">
+        <input type="text" name="" id="input-box" placeholder="Add your text">
+        <button>Add</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
