--- a/Mini-Projects/Quiz-App/index.html
+++ b/Mini-Projects/Quiz-App/index.html
@@ -20,6 +20,6 @@
       <button id="next-btn">Next</button>
     </div>
   </div>
-  <script src="scrip"></script>
+  <script src="script.js"></script>
 </body>
 </html>
