random pass generator app fully designed

--- a/Mini-Projects/Password-Generator/index.html
+++ b/Mini-Projects/Password-Generator/index.html
@@ -7,6 +7,13 @@
   <title>Random-Password-Generator</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Generate a <br><span>Random Password</span></h1>
+    <div class="display">
+      <input type="text" name="" id="password" placeholder="Password">
+      <img src="images/copy.png" alt="">
+    </div>
+    <button><img src="images/generate.png" alt="">Generate Password</button>
+  </div>
 </body>
 </html>
