--- a/Mini-Projects/Password-Generator/index.html
+++ b/Mini-Projects/Password-Generator/index.html
@@ -13,7 +13,8 @@
       <input type="text" name="" id="password" placeholder="Password">
       <img src="images/copy.png" alt="">
     </div>
-    <button><img src="images/generate.png" alt="">Generate Password</button>
+    <button onclick="createPassword()"><img src="images/generate.png" alt="">Generate Password</button>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
