--- a/Mini-Projects/Password-Generator/index.html
+++ b/Mini-Projects/Password-Generator/index.html
@@ -11,7 +11,7 @@
     <h1>Generate a <br><span>Random Password</span></h1>
     <div class="display">
       <input type="text" name="" id="password" placeholder="Password">
-      <img src="images/copy.png" alt="">
+      <img onclick="copyPassword()" src="images/copy.png" alt="">
     </div>
     <button onclick="createPassword()"><img src="images/generate.png" alt="">Generate Password</button>
   </div>
